--- a/src/pages/Chat/styles.css
+++ b/src/pages/Chat/styles.css
@@ -34,6 +34,11 @@
   transition: 0.3s;
 }
 
+.fake-link :hover {
+    color: #eb6262;
+    cursor: pointer;
+}
+
 .social__links span a:hover {
   color: #eb6262;
 }
